# boxed-in-solver

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt
BoxedInSolver/: BoxedInSolver.cc  Makefile
ViewSolution/: Makefile  ViewSolution  ViewSolution.cc
design/: pseudocode.txt
docker/debian-buster/: Dockerfile
dox/html/: BoxedInNode_8cc.html  BoxedInNode_8h.html  BoxedInNode_8h_source.html  LevelState_8cc.html  LevelState_8h.html  LevelState_8h_source.html  SearchResult_8h.html  SearchResult_8h_source.html  annotated.html  astar_8cc.html  astar_8h.html  astar_8h_source.html  boxedindefs_8h.html  boxedindefs_8h_source.html  boxedinio_8cc.html  boxedinio_8h.html  boxedinio_8h_source.html  boxedinsolver_page.html  boxedintypes_8h.html  boxedintypes_8h_source.html  classboxedin_1_1BoxedInNode-members.html  classboxedin_1_1BoxedInNode.html  classboxedin_1_1LevelState-members.html  classboxedin_1_1LevelState.html  classboxedin_1_1OpenSetData-members.html  classboxedin_1_1OpenSetData.html  classboxedin_1_1SearchResult-members.html  classboxedin_1_1SearchResult.html  classes.html  dir_0211e95ad545e583199fe8b93a267026.html  dir_6003487c10408818493d598adea9ce6c.html  dir_8541653c9275d07f9d06ae7c832f8313.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group__boxedin__group.html  (+33 more)
dox/latex/: BoxedInNode_8cc.tex  BoxedInNode_8h.tex  LevelState_8cc.tex  LevelState_8h.tex  SearchResult_8h.tex  annotated.tex  astar_8cc.tex  astar_8h.tex  boxedindefs_8h.tex  boxedinio_8cc.tex  boxedinio_8h.tex  boxedinsolver_page.tex  boxedintypes_8h.tex  classboxedin_1_1BoxedInNode.tex  classboxedin_1_1LevelState.tex  classboxedin_1_1OpenSetData.tex  classboxedin_1_1SearchResult.tex  dir_0211e95ad545e583199fe8b93a267026.tex  dir_6003487c10408818493d598adea9ce6c.tex  dir_8541653c9275d07f9d06ae7c832f8313.tex  files.tex  group__boxedin__group.tex  group__boxedin__io__group.tex  index.tex  memusage_8cc.tex  memusage_8h.tex  modules.tex  namespaceboxedin.tex  namespaceboxedin_1_1io.tex  namespaceboxedin__io.tex  namespaceio.tex  namespaces.tex  refman.tex  structMemUsage.tex  structboxedin_1_1ActionPoint.tex  structboxedin_1_1Coordinate.tex  structboxedin_1_1FValCompare.tex  structboxedin_1_1FloodFillNode.tex  structboxedin_1_1KeyEqual.tex  structboxedin_1_1KeyHash.tex  (+1 more)
hdr/: EncodedPath.h  Heuristic.h  Node.h  SearchResult.h  astar.h  boxedindefs.h  boxedinio.h  boxedintypes.h  config.h
level-data/1/: 02.txt  03.txt  05.txt  07.txt  12.txt  15.txt  23.txt  24.txt  25.txt  27.txt  29.txt  32.txt  33.txt  34.txt  37.txt  38.txt  40.txt  41.txt  42.txt  43.txt  45.txt  47.txt
level-data/2/: 01.txt  08.txt  09.txt  11.txt  13.txt  14.txt  18.txt  21.txt  22.txt  24.txt  25.txt  27.txt  35.txt  36.txt  38.txt  39.txt  40.txt  41.txt  42.txt  48.txt
level-data/3/: 02.txt  06.txt  07.txt  09.txt  11.txt  14.txt  15.txt  16.txt  20.txt  21.txt  23.txt  27.txt  29.txt  31.txt  33.txt  39.txt  42.txt  43.txt  49.txt
levels/1/: 04.txt  06.txt  08.txt  09.txt  10.txt  13.txt  14.txt  16.txt  18.txt  19.txt  20.txt  21.txt  22.txt  26.txt  28.txt  30.txt  31.txt  35.txt  36.txt  48.txt  49.txt  50.txt
levels/2/: 03.txt  04.txt  05.txt  06.txt  07.txt  10.txt  12.txt  15.txt  20.txt  23.txt  28.txt  30.txt  31.txt  32.txt  33.txt  37.txt  44.txt  45.txt  46.txt  47.txt  50.txt
levels/3/: 01.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  22.txt  24.txt  25.txt  26.txt  28.txt  30.txt  32.txt  35.txt  36.txt  37.txt  44.txt  45.txt  46.txt  47.txt  48.txt  50.txt
libboxedin/: Makefile
libboxedin/include/: BoxedInNode.h  Heuristic.h  Level.h  LevelState.h  Node.h  SearchResult.h  astar.h  boxedindefs.h  boxedinio.h  boxedintypes.h  memusage.h
msvc/: BoxedInSolver.sln
scripts/: solve-and-validate.sh  solve-and-view.sh  solve.sh  solve_and_view.sh
src/: BoxedInSolver.cc  EncodedPath.h  FloodFillNode.h  Heuristic.cc  Heuristic.h  Level.cc  Level.h  Node.cc  Node.h  ViewSolution.cc  astar.cc  astar.h  boxedindefs.h  boxedinio.cc  boxedinio.h  boxedintypes.h  config.h  memusage.cc  solve.cc  validate.cc
test/: CMakelists.txt  FloodFillTest.cc  Makefile  encoded_path_test.cc  symmetric_cost_table_test.cc
win/: ConsoleColor.h  wingetopt.c
(+248 files in other folders)
